--- a/main.css
+++ b/main.css
@@ -15,7 +15,7 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  background-color: rgb(190, 190, 190);
+  /*background-color: rgb(190, 190, 190);*/
 }
 
 footer {
